2007-09-05	Daniel Hellstrom <daniel@gaisler.com>

	* shared/amba/ambapp.c, shared/include/ambapp.h: New files.

2007-09-05	Daniel Hellstrom <daniel@gaisler.com>

	* Makefile.am: LEON3 AMBA PnP bus scanning moved to shared/amba/amba.c
	and shared/include/ambapp.h. The AMBA scanning was improved to take
	account for PnP info address translation. This is useful when
	scanning remote AMBA busses for example when a board connected with
	PCI has an AMBA bus that needs to be scanned, before the addresses
	was hard coded. Also, LEON2 now have AMBA PnP bus scanning support.
	By using the new AMBA scanning routines it is possible to isolate the
	AMBA scanning code to ambapp.c, however existing drivers should be
	updated to use them in order to save space.

2007-05-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/bspstart.c: Add include <rtems/bspIo.h> to remove warning.

2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/bspstart.c, shared/gnatcommon.c: Remove debug print methods
	that are redundant with prntk and replace their use with printk.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* erc32/tools/runtest.in, leon2/tools/runtest.in,
	leon3/tools/runtest.in: Do not run pppd.exe from batch mode script.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* shared/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-16	Joel Sherrill <joel@OARcorp.com>

	* shared/bspstart.c, shared/start.S: Use common clock driver template
	and eliminate all fast idle code specific to this BSP. This
	eliminates a fair amount of code in the BSP clock driver and
	bsp_startup. The LEON3 has to do a scan of the AMBA bus to find the
	timer so I added the new hook Clock_driver_support_find_timer to
	support this. In general, there was some clean up to the file headers
	of various files.
